Upgraded rails. Upgraded gems. Added users supplied word for starting a game.

--- a/app/views/games/_start_button.html.erb
+++ b/app/views/games/_start_button.html.erb
@@ -1,4 +1,6 @@
 <%= form_for game do |f| %>
+  <%= label_tag(:word, "Word:") %>
+  <%= password_field_tag(:word) %>
   <%= f.submit "Start a Game" %>
 <% end %>
 
