Added 'team' to game and forced it to be chosen.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,12 @@
   max-width: 800px;
 }
 
+fieldset.game {
+  text-align: left;
+  margin: auto;
+  width: 350px;
+}
+
 form.guess {
   display: inline-block;
 }
