--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -2,7 +2,7 @@
   <h1 class="header">Hangman</h1>
   <div class="subheader">
     A game written in Ruby on Rails
-    (<%= link_to "Source", "https://github.com/kofno/HangmanRails" %>)
+    (<%= link_to "Forked Source", "https://github.com/blazerw/HangmanRails" %>)
   </div>
   <hr />
 
