--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -4,6 +4,9 @@
     A game written in Ruby on Rails
     (<%= link_to "Forked Source", "https://github.com/blazerw/HangmanRails" %>)
   </div>
+  <div class="subheader" id="timer">
+    10 minute timer
+  </div>
   <hr />
 
   <% if @games.present? %>
