--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -24,4 +24,35 @@
   <% end %>
 
   <%= render partial: "games/start_button", locals: { game: @game } %>
+  <div>
+    <table class="pure-table" style="margin: 0.5em auto;">
+      <tr>
+        <th><%= @score.columns[0] %></th>
+        <td><%= @score.rows.first[0] %></td>
+      </tr>
+      <tr>
+        <th><%= @score.columns[1] %></th>
+        <td><%= @score.rows.first[1] %></td>
+      </tr>
+  </div>
+  <div>
+    <table class="pure-table" style="margin: 0.5em auto;">
+      <thead>
+        <tr>
+          <% @details.columns.each do |column| %>
+            <th><strong><%= column %></strong></th>
+          <% end %>
+        </tr>
+      </thead
+      <tbody>
+        <% @details.rows.each do |row| %>
+          <tr>
+            <% row.each do |cell| %>
+              <td><%= cell %></td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
