Show history and have a home link.

--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -4,6 +4,9 @@
     A game written in Ruby on Rails
     (<%= link_to "Forked Source", "https://github.com/blazerw/HangmanRails" %>)
   </div>
+  <div class="subheader">
+    <%= link_to "Home", root_path %>
+  </div>
   <div class="subheader" id="timer">
     &nbsp;
   </div>
